# ble-poc-obsolete

./: .gitignore  Makefile  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/io/mosip/greetings/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/mosip/greetings/: ChatActivity.kt  Conversation.java  MainActivity.kt  (+2 more)
android/app/src/main/res/layout/: activity_chat.xml  activity_main.xml  component_message_received.xml  component_message_send.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/iosBLEDemo/: README.md
ios/iosBLEDemo/CoreBluetoothLESample/: AppDelegate.swift  CentralViewController.swift  Info.plist  PeripheralViewController.swift
ios/iosBLEDemo/CoreBluetoothLESample.xcodeproj/: project.pbxproj
ios/iosBLEDemo/CoreBluetoothLESample.xcworkspace/: contents.xcworkspacedata
ios/iosBLEDemo/CoreBluetoothLESample/Base.lproj/: Main.storyboard
ios/rusty-ios/rusty-ios/: ContentView.swift  rusty_iosApp.swift
ios/rusty-ios/rusty-ios.xcodeproj/: project.pbxproj
ios/rusty-ios/rusty-iosTests/: rusty_iosTests.swift
ios/rusty-ios/rusty-iosUITests/: rusty_iosUITests.swift  rusty_iosUITestsLaunchTests.swift
rustlib-binding/: Cargo.toml  build.rs  uniffi.toml
rustlib-binding/src/: androidjni.rs  identity.udl  ios.rs  java_glue.rs  java_glue.rs.in  lib.rs
scripts/peripheralSimulator/: main.js  package-lock.json  package.json
(+10 files in other folders)
